# game-review

./: .env  .gitignore  .gitlab-ci.yml  BERT_BiLSTM_Game_Review.ipynb  How to run this project.txt  README.md  cookiecutter-config-file.yml  docker-compose.override.yml  docker-compose.yml  haproxy.cfg  package-lock.json
backend/: backend.dockerfile  celeryworker.dockerfile
backend/app/: pyproject.toml  start-reload.sh
backend/app/ai/: BERT_BiLSTM_Game_Review.ipynb  inference.py  preprocess.py
backend/app/app/: backend_pre_start.py  celeryworker_pre_start.py  initial_data.py  worker.py
backend/app/app/api/api_v1/: api.py
backend/app/app/api/api_v1/endpoints/: games.py  sentiment.py  utils.py
backend/app/app/core/: celery_app.py  config.py
backend/app/app/crud/: __init__.py  crud_games.py  crud_sentiment.py
backend/app/app/db/: base.py
backend/app/app/models/: __init__.py  games.py  sentiment.py
backend/app/app/schemas/: __init__.py  games.py  msg.py  sentiment.py
frontend/: .env  Dockerfile  nginx.conf  package.json
frontend/src/: index.js  menu-sidebar.js  routes.js
frontend/src/components/Footers/: AdminFooter.js
frontend/src/components/Headers/: AboutUsHeader.js  DashboardHeader.js  Header.js  ListGameHeader.js  ReviewGameHeader.js  SearchHeader.js  UserHeader.js  styleheader.css  userheader.css
frontend/src/components/Navbars/: AdminNavbar.js  (+1 more)
frontend/src/layouts/: Admin.js  Auth-regis.js  Auth-verifemail.js  Auth.js  style-auth-verifemail.css  style-auth.css  style-regis.css
frontend/src/variables/: charts.js
reverseproxy/: haproxy.cfg  nginx.conf
(+13 files in other folders)
