[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
uvicorn = "^0.11.8"
fastapi = "^0.54.1"
python-multipart = "^0.0.5"
email-validator = "^1.0.5"
requests = "^2.23.0"
celery = "^4.4.2"
importlib-metadata = "4.13.0"
httpcore = "<=0.15"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
tenacity = "^6.1.0"
pydantic = "^1.4"
emails = "^0.5.15"
raven = "^6.10.0"
gunicorn = "^20.0.4"
jinja2 = "^2.11.2"
psycopg2-binary = "^2.8.5"
alembic = "^1.4.2"
sqlalchemy = "^1.3.16"
scipy = "1.7.3"
pytest = "^5.4.1"
matplotlib = "^3.5.3"
matplotlib-inline = "^0.1.6"
numpy = "1.21.6"
tensorflow-gpu = "2.10.0"
keras = "2.10.0"
keras-bert = "0.89.0"
keras-preprocessing = "1.1.2"
keras-transformer = "0.40.0"
scikit-learn = "1.0.2"
nltk = "3.8.1"
pandas = "1.3.5"
regex = "^2022.10.31"
tokenizers = "0.13.2"
torch = "1.13.1"
torchvision = "0.14.1"
torchaudio = "0.13.1"
tqdm = "4.64.1"
transformers = "4.26.1"
pytorch-crf = "0.7.2"
huggingface-hub = "0.13.3"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}

[tool.poetry.dev-dependencies]
mypy = "^0.770"
black = "^19.10b0"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest = "^5.4.1"
sqlalchemy-stubs = "^0.3"
pytest-cov = "^2.8.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

